Tutorial: 6 (reactivity) and tweaks

--- a/skeleton-app/src/styles/main.css
+++ b/skeleton-app/src/styles/main.css
@@ -15,3 +15,9 @@ code {
     font-size: 18px;
     font-family: monospace;
 }
+
+button {
+    margin-top: 0.5rem;
+    display: block;
+    color: black;
+}
